Version 3.1.8
-------------
Updated finalized stats for new FSD's, gravity thrusters and armours
Updated weapon damage, rate of fire and/or magazine size for AR-50, C-44, Eclipse and Oppressor

Version 3.1.7
-------------
Fixed stats for size 8 FSDs

Version 3.1.6
-------------
Removed non-existent Caspian Explorer Armours
Swapped Mk2 with Mk1 for Caspian Explorer Armours
Implement graceful handling of missing core modules. In case your module no longer exists in the app, the default loadout module is restored.

Version 3.1.5
-------------
Updated stats for Caspian Explorer (WIP)
Updated stats for FSD and armour (WIP)

Version 3.1.4
-------------
Added Caspian Explorer (WIP)
Added new FSD/Thruster/Armour modules
Added Armour glide angle/speed stats
Added FSD Dwarf/Neutron boost stats
Disabled trailblazers section in Colonisation UI, since these were disabled
Fixed module change detection not working properly on 1A Armours because they were all the same size/class

Version 3.1.3
-------------
Fix faulty javafx cache and log folder locations when opening the application through an edomh url. This could result in an error being shown.
Handle new CompleteConstruction journal event
Added Georgian localization support

Version 3.1.2
-------------
Fixed adding wishlist experimental effect material requirement when no grades were selected on the base blueprint
Fixed colonisation project not updating when delivering materials

Version 3.1.1
-------------
Handle multiple monitors for AR color picker

Version 3.1.0
-------------
Added AR fuzzy text matching configuration option
- If detection with exact matching does not work well for you, try enabling fuzzy matching (does increase the chance of false positives)
- The percentage a read text has to match to a material is configurable (default 90%)
- Application logs provide insight into what text was read and what materials were matched