@@ -1903,39 +1903,39 @@ public class ShipSpecs {
             Map.entry(HorizonsModifier.SHIELDS, 500.0),
             Map.entry(HorizonsModifier.ARMOUR, 345.0),
             Map.entry(HorizonsModifier.MASS, 950.0),
-            Map.entry(HorizonsModifier.MINIMUM_THRUST, 0.0),
-            Map.entry(HorizonsModifier.BOOST_INTERVAL, 0.0),
-            Map.entry(HorizonsModifier.BOOST_COST, 0.0),
-            Map.entry(HorizonsModifier.FORWARD_ACCELERATION, Double.NaN),
-            Map.entry(HorizonsModifier.REVERSE_ACCELERATION, Double.NaN),
-            Map.entry(HorizonsModifier.LATERAL_ACCELERATION, Double.NaN),
+            Map.entry(HorizonsModifier.MINIMUM_THRUST, 76.0),
+            Map.entry(HorizonsModifier.BOOST_INTERVAL, 5.5),
+            Map.entry(HorizonsModifier.BOOST_COST, 25.0),
+            Map.entry(HorizonsModifier.FORWARD_ACCELERATION, 30.0),
+            Map.entry(HorizonsModifier.REVERSE_ACCELERATION, 25.0),
+            Map.entry(HorizonsModifier.LATERAL_ACCELERATION, 20.0),
             Map.entry(HorizonsModifier.SUPERCRUISE_PROFILE, new Double[][]{
-                    {Double.NaN, Double.NaN, Double.NaN},
-                    {Double.NaN, Double.NaN, Double.NaN},
-                    {Double.NaN, Double.NaN, Double.NaN}}),
+                    {50.0, 28.0, 60.0},
+                    {80.0, 90.0, 80.0},
+                    {50.0, 18.0, 60.0}}),
             Map.entry(HorizonsModifier.CRUISE_PITCH_PROFILE, new Double[][]{
-                    {Double.NaN, Double.NaN},
-                    {Double.NaN, Double.NaN},
-                    {Double.NaN, Double.NaN}}),
+                    {50.0, 50.0},
+                    {22.0, 29.0},
+                    {40.0, 50.0}}),
             Map.entry(HorizonsModifier.CRUISE_ROLL_PROFILE, new Double[][]{
-                    {Double.NaN, Double.NaN},
-                    {Double.NaN, Double.NaN},
-                    {Double.NaN, Double.NaN}}),
+                    {80.0, 80.0},
+                    {72.5, 72.5},
+                    {65.0, 65.0}}),
             Map.entry(HorizonsModifier.CRUISE_YAW_PROFILE, new Double[][]{
-                    {Double.NaN, Double.NaN},
-                    {Double.NaN, Double.NaN},
-                    {Double.NaN, Double.NaN}}),
+                    {50.0, 50.0},
+                    {13.5, 13.5},
+                    {40.0, 50.0}}),
             Map.entry(HorizonsModifier.MAX_PITCH_SPEED, 30.0),
             Map.entry(HorizonsModifier.MAX_YAW_SPEED, 14.0),
             Map.entry(HorizonsModifier.MAX_ROLL_SPEED, 75.0),
-            Map.entry(HorizonsModifier.MIN_PITCH_SPEED, 20.0),
-            Map.entry(HorizonsModifier.HEAT_CAPACITY,  Double.NaN),
-            Map.entry(HorizonsModifier.HEAT_DISSIPATION_MIN, Double.NaN),
-            Map.entry(HorizonsModifier.HEAT_DISSIPATION_MAX, Double.NaN),
+            Map.entry(HorizonsModifier.MIN_PITCH_SPEED, 23.0),
+            Map.entry(HorizonsModifier.HEAT_CAPACITY,  341.0),
+            Map.entry(HorizonsModifier.HEAT_DISSIPATION_MIN, 3.21),
+            Map.entry(HorizonsModifier.HEAT_DISSIPATION_MAX, 72.14),
             Map.entry(HorizonsModifier.FUEL_RESERVE, 1.14),
             Map.entry(HorizonsModifier.ARMOUR_HARDNESS, 60.0),
             Map.entry(HorizonsModifier.MASS_LOCK, 21.0),
-            Map.entry(HorizonsModifier.SENSOR_LOCK_MIN, 0.0)
+            Map.entry(HorizonsModifier.SENSOR_LOCK_MIN, 472.0)
     );
 
 }
